--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "start": "node index.js",
         "lint": "eslint",
-        "format": "prettier --single-quote --write *.js"    
+        "format": "prettier --single-quote --write *.js",
+        "build": "echo 'build script executed'"
     },
     "devDependencies": {
         "eslint": "^7.5.0",
